<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_social"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal" >
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
                  
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="20"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qqLogin"
                android:id="@+id/qqBtn"/>
        
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinaLogin"
                android:id="@+id/sinaBtn"/>
        
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baiduLogin"
                android:id="@+id/baiduBtn"/>
        
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/renrenLogin"
                android:id="@+id/renrenBtn"/>
        
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaixinLogin"
                android:id="@+id/kaixinBtn"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">
                 <Button 
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
        </LinearLayout>
  </LinearLayout>
</ScrollView>

